--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -3,7 +3,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:paddingHorizontal="16dp"
+    android:layout_marginBottom="36dp">
 
     <!-- Imagen del restaurante con bordes curvados -->
     <com.google.android.material.imageview.ShapeableImageView
@@ -30,7 +31,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="18sp"
-            android:textStyle="bold"
             android:textColor="@color/black"
             android:text="@string/nameRest"
             android:fontFamily="@font/sen_font"/>
@@ -60,9 +60,8 @@
     <!-- Divisor entre ítems -->
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="18dp"
-        android:background="@color/gray_light"/> <!-- Color del divisor -->
+        android:background="@color/gray_light"/>
 
 </LinearLayout>
