--- a/app/src/main/res/layout/activity_cliente_carrito.xml
+++ b/app/src/main/res/layout/activity_cliente_carrito.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:padding="12dp">
 
         <!-- Botón de regresar (flecha) -->
         <Button
@@ -22,10 +23,8 @@
             android:id="@+id/btnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_margin="16dp"
             app:icon="@drawable/baseline_arrow_back_ios_new_24"
-            android:contentDescription="regresar"/>
+            android:contentDescription="@string/btnBack"/>
 
         <!-- Texto "carrito" -->
         <TextView
@@ -33,6 +32,8 @@
             android:layout_height="wrap_content"
             android:text="Carrito"
             android:textSize="20sp"
+            android:fontFamily="@font/sen_font"
+            android:padding="8dp"
             android:textColor="@android:color/white">
         </TextView>
     </LinearLayout>
