--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -5,10 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="12dp"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="4dp"
-    android:backgroundTint="@color/white"
-    app:strokeColor="@color/gray_light">
+    android:background="@drawable/border_bottom"
+    android:backgroundTint="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
